# deque-loader-rs

./: .gitignore  Cargo.toml  README.md  benchmark.yml  diesel.toml  rustfmt.toml
channel-loader/: Cargo.toml  README.md
channel-loader/src/: batch_loader.rs  deferral_token.rs  diesel.rs  key.rs  lib.rs  loadable.rs  loader.rs  reactor.rs  request.rs  simple_loader.rs  task.rs  worker.rs
channel-loader/src/diesel/: error.rs  loader.rs
crates/async-graphql-demo/: Cargo.toml
crates/async-graphql-demo/src/: data.rs  main.rs  schema.rs
crates/async-graphql-demo/src/data/: bookmark.rs  content.rs  deletion_receipt.rs  user.rs
crates/async-graphql-demo/src/schema/: mutation_root.rs  query_root.rs
crates/db/: Cargo.toml
crates/db/src/: schema.rs
deque-loader/: Cargo.toml
deque-loader-derive/: Cargo.toml
deque-loader-derive/src/: lib.rs
deque-loader/src/: batch.rs  diesel.rs  graphql.rs  key.rs  lib.rs  loadable.rs  loader.rs  redis.rs  request.rs  task.rs  worker.rs
deque-loader/src/diesel/: error.rs  loader.rs
deque-loader/src/redis/: cache.rs  client.rs  connection.rs  loader.rs
migrations/2021-06-10-184018_user/: up.sql
migrations/2021-06-10-184443_content/: down.sql  up.sql
