[package]
authors = [ "Thomas Sieverding <Thomas@bajix.com>" ]
edition = "2018"
name = "channel-loader"
version = "0.1.0-beta.10"
description = "A channel based solution designed for efficient data loading"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Bajix/channel-loader-rs/"

[dependencies]
async-graphql = { version = "2.9.3", optional = true }
async-trait = "0.1.50"
crossbeam = "0.8.1"
diesel = { version = "1.4.7", features = [ "postgres", "r2d2" ], optional = true }
diesel-connection = { version = "1.0.5", optional = true }
itertools = "0.10.1"
log = "0.4.14"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = [ "rt", "sync", "time", "macros" ] }

[features]
default = [ "diesel-loader", "graphql" ]
graphql = [ "async-graphql" ]
diesel-loader = [ "diesel", "diesel-connection" ]
tracing = ["diesel-connection/tracing"]
mysql = [ "diesel-connection/mysql" ]
postgres = [ "diesel-connection/postgres" ]
sqlite = [ "diesel-connection/sqlite" ]

[lib]
doctest = false
