[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2018"
name = "deque-loader-derive"
version = "0.1.0-beta.3"
description = "Efficient data loading via work stealing and thread local deques"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Bajix/deque-loader-rs/"

[dependencies]
darling = "0.13.0"
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "1.0.74", features = ["full"] }

[lib]
doctest = false
proc-macro = true
