[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2018"
name = "deque-loader"
version = "0.1.0-beta.2"
description = "Efficient data loading via work stealing and thread local deques"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Bajix/deque-loader-rs/"

[dependencies]
async-graphql = { version="2.9", optional=true }
async-trait = "0.1.50"
atomic-take = "1.0.0"
crossbeam = "0.8.1"
diesel = { version="1.4.7", features=["postgres", "r2d2"], optional=true }
diesel-connection = { version="1.0.5", optional=true }
flurry = "0.3.1"
inventory = "0.1.10"
itertools = "0.10.1"
log = "0.4.14"
num = "0.4.0"
num_cpus = "1.13.0"
rayon = "1.5.1"
static_init = "1.0.1"
thiserror = "1.0.26"
tokio = { version="1", features=["rt", "sync", "time", "macros"] }
type-equals = "0.1.0"

[features]
default = ["diesel-loader", "graphql"]
graphql = ["async-graphql"]
diesel-loader = ["diesel", "diesel-connection"]
tracing = ["diesel-connection/tracing"]
mysql = ["diesel-connection/mysql"]
postgres = ["diesel-connection/postgres"]
sqlite = ["diesel-connection/sqlite"]

[lib]
doctest = false
