[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2018"
name = "deque-loader"
version = "0.1.0-beta.3"
description = "Efficient data loading via work stealing and thread local deques"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Bajix/deque-loader-rs/"

[dependencies]
async-graphql = { version = "5.0.6", optional = true }
async-trait = "0.1.51"
atomic-take = "1.0.0"
crossbeam = "0.8.1"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"], optional = true }
diesel-connection = { version = "4.0.1", optional = true, features = ["postgres"]}
flurry = "0.4.0"
inventory = "0.3.4"
itertools = "0.10.1"
log = "0.4.14"
num = "0.4.0"
num_cpus = "1.13.0"
rayon = "1.5.1"
static_init = "1.0.1"
thiserror = "1.0.30"
tokio = { version = "1", features = [
  "rt",
  "sync",
  "time",
  "macros",
  "parking_lot",
] }
deque-loader-derive = { path = "../deque-loader-derive" }
redis = { version = "0.22.3", features = [
  "tokio-comp",
  "connection-manager",
], optional = true }
bincode = "1.3.3"
serde = "1.0.130"
tynm = "0.1.6"
once_cell = "1.8.0"
futures-util = "0.3.17"
url = "2.2.2"
arc-swap = "1.4.0"
swap-queue = "1.1.0"


[features]
default = ["diesel-loader", "redis-loader", "graphql"]
graphql = ["async-graphql"]
diesel-loader = ["diesel", "diesel-connection"]
mysql = ["diesel-connection/mysql"]
postgres = ["diesel-connection/postgres"]
sqlite = ["diesel-connection/sqlite"]
redis-loader = ["redis"]
redis-cluster = ["redis/cluster"]

[lib]
doctest = false
