[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
name = "async_graphql_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.10.1", features = ["apollo_tracing", "tracing"] }
async-graphql-warp = "2.10.1"
booter = "1.1.2"
deque-loader = { path = "../../deque-loader", features = [
  "redis-loader",
  "postgres",
  "graphql",
] }
db = { path = "../db" }
derive-id = "0.1.6"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
diesel-connection = { version = "1.0.6", features = ["postgres", "tracing"] }
dotenv = "0.15.0"
http = "0.2.5"
inventory = "0.1.10"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = "1.0.130"
static_init = "1.0.1"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.1"
